# OdznDrive

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
Client/: CMakeLists.txt
Client/include/: connectionmanager.h  filemodel.h
Client/qml/: FileListView.qml  HeaderBar.qml  Main.qml  SettingsDialog.qml  TransferProgress.qml
Client/qml/Singletons/: Constants.qml  Intercom.qml
Client/resources/icons/: icons.qrc
Client/src/: connectionmanager.cpp  filemodel.cpp  main.cpp  version.h.in
Server/: CMakeLists.txt
Server/include/: clientconnection.h  config.h  filemanager.h  fileserver.h
Server/src/: clientconnection.cpp  config.cpp  filemanager.cpp  main.cpp
include/: connectionmanager.h  filedialoghelper.h  filemodel.h  filterproxymodel.h  imagepreviewprovider.h  treemodel.h  usermodel.h  versionhelper.h  windowsplatform.h
qml/: CustomButton.qml  CustomDialog.qml  DeleteConfirmDialog.qml  DownloadProgressDialog.qml  EmptySpaceMenu.qml  FileListView.qml  FileListView.qml.autosave  FileSystemView.qml  FooterBar.qml  ItemContextMenu.qml  Main.qml  MultiDeleteConfirmDialog.qml  RenameDialog.qml  Separator.qml  SettingsDialog.qml  TransferProgress.qml  UploadProgressDialog.qml
qml/Components/: BreadcrumBar.qml  DragIndicator.qml  DropIndicator.qml  EmptySpaceMenu.qml  FileListView.qml  FileSystemView.qml  FileTileView.qml  FolderTreeView.qml  FooterBar.qml  ItemContextMenu.qml  LoginArt.qml  LoginPage.qml  MainMenu.qml  MainMenuPopup.qml  ParentItemMenu.qml  TransferStatus.qml
qml/CustomComponents/: CustomBusyIndicator.qml  CustomButton.qml  CustomDialog.qml  CustomMenu.qml  CustomProgressBar.qml  CustomScrollView.qml  CustomSplitView.qml  CustomStackView.qml  CustomTextField.qml
qml/Dialogs/: AdvancedSettingsDialog.qml  ConfirmDeleteUserDialog.qml  ConnectionLostDialog.qml  DeleteConfirmDialog.qml  DownloadProgressDialog.qml  ErrorDialog.qml  ImagePreviewDialog.qml  MultiDeleteConfirmDialog.qml  NewFolderDialog.qml  OverrideWarningDialog.qml  RenameDialog.qml  SettingsDialog.qml  ShareableLinkDialog.qml  TextPreviewDialog.qml  TransferProgress.qml  UploadProgressDialog.qml  UserAddDialog.qml  UserManagmentDialog.qml
qml/Pages/: FileSystemView.qml  LoginPage.qml
qml/Singletons/: Constants.qml  UserSettings.qml  Utils.qml
resources/fonts/: fonts.qrc
resources/icons/: icons.qrc
server/: CMakeLists.txt
server/include/: clientconnection.h  config.h  filemanager.h  fileserver.h  httpserver.h  protocol.h
server/resources/: resources.qrc
server/resources/html/: download.html  error.html
server/src/: clientconnection.cpp  config.cpp  filemanager.cpp  fileserver.cpp  httpserver.cpp  main.cpp  version.h.in
src/: connectionmanager.cpp  filedialoghelper.cpp  filemodel.cpp  filterproxymodel.cpp  imagepreviewprovider.cpp  main.cpp  treemodel.cpp  usermodel.cpp  version.h.in  versionhelper.cpp  windowsplatform.cpp
tools/: installer.iss
